@@ -1,5 +1,12 @@
 2007-08-03  David Gilbert  <david.gilbert@object-refinery.com>
 
+	* source/org/jfree/chart/renderer/xy/XYSplineAndShapeRenderer.java
+	(precision): Initialise in constructor,
+	(XYSplineAndShapeRenderer()): Change default precision to 5,
+	(XYSplineAndShapeRenderer(int)): New constructor.
+
+2007-08-03  David Gilbert  <david.gilbert@object-refinery.com>
+
 	Fix for bug 1766646:
 	* source/org/jfree/chart/renderer/xy/XYBlockRenderer.java
 	(findDomainBounds): Check for null,
